Move icon theming to base. Add check for svg. Arch only uses simple icons.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -394,6 +394,33 @@
       }
     }
 
+    /* Non-Inverted Icons */
+    :is(:not(.cdx-icon) svg,
+    :not(.skin-invert-image) img,
+    .oo-ui-iconElement-icon:is(
+      .oo-ui-image-progressive,
+      .oo-ui-image-destructive,
+      .oo-ui-checkboxInputWidget-checkIcon,
+      .oo-ui-image-invert,
+      .mw-no-invert
+    ))[src$=".svg"] {
+      filter: @accent-filter;
+    }
+
+    /* Inverted Icons */
+    :is(.cdx-icon svg,
+    .skin-invert-image img,
+    .skin-invert,
+    .oo-ui-iconElement-icon:not(
+      .oo-ui-image-progressive,
+      .oo-ui-image-destructive,
+      .oo-ui-checkboxInputWidget-checkIcon,
+      .oo-ui-image-invert,
+      .mw-no-invert
+    ))[src$=".svg"] {
+      filter: @text-filter;
+    }
+
     #mixins.table();
 
     table.diff {
@@ -1825,6 +1852,21 @@
         border-bottom-color: @blue !important;
         color: @text !important;
       }
+    }
+
+    .mw-parser-output a.extiw {
+      @svg: escape(
+        '<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="@{accent}" d="M5.002 1.01h7v7l-2-2-3 2v-1l3-2.25 1 1V2.01h-3.75l1 1-2.25 3h-1l2-3z"/><path fill="@{accent}" d="M7.002 3.01h-5v8h8v-5h-1v4h-6v-6h4z"/><path fill="@{accent}" d="M4.082 5.51c0-.621.621-.621.621-.621q2.796.932 3.728 3.728s0 .621-.62.621C6.566 7.374 5.945 6.753 4.081 5.51z"/></svg>'
+      );
+      background-image: url("data:image/svg+xml,@{svg}");
+    }
+
+    img.mw-file-element[src$="Tango-view-fullscreen.svg"] {
+      @svg: escape(
+        '<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="48" height="48"><defs><linearGradient id="d"><stop style="stop-color:@{base};stop-opacity:1" offset="0"/><stop style="stop-color:@{base};stop-opacity:0" offset="1"/></linearGradient><linearGradient id="a"><stop style="stop-color:@{base};stop-opacity:0" offset="0"/><stop offset=".5" style="stop-color:@{base};stop-opacity:1"/><stop style="stop-color:@{base};stop-opacity:0" offset="1"/></linearGradient><linearGradient xlink:href="#a" id="f" gradientUnits="userSpaceOnUse" gradientTransform="matrix(2.77439 0 0 1.9697 -1892.179 -872.885)" x1="302.857" y1="366.648" x2="302.857" y2="609.505"/><linearGradient id="c"><stop style="stop-color:@{accent};stop-opacity:1" offset="0"/><stop style="stop-color:@{accent};stop-opacity:0" offset="1"/></linearGradient><linearGradient id="b"><stop style="stop-color:@{surface0};stop-opacity:1" offset="0"/><stop style="stop-color:@{surface0};stop-opacity:1" offset="1"/></linearGradient><linearGradient xlink:href="#b" id="i" gradientUnits="userSpaceOnUse" x1="22.625" y1="7.71" x2="22.625" y2="40.5" gradientTransform="translate(-.035 -.53)scale(1.01177)"/><linearGradient xlink:href="#c" id="j" x1="12.364" y1="11.394" x2="18.227" y2="17.581" gradientUnits="userSpaceOnUse"/><linearGradient xlink:href="#c" id="k" gradientUnits="userSpaceOnUse" x1="12.364" y1="11.394" x2="18.227" y2="17.581" gradientTransform="matrix(-1 0 0 1 49 0)"/><linearGradient xlink:href="#c" id="l" gradientUnits="userSpaceOnUse" x1="12.364" y1="11.394" x2="18.227" y2="17.581" gradientTransform="matrix(1 0 0 -1 0 47.031)"/><linearGradient xlink:href="#c" id="m" gradientUnits="userSpaceOnUse" gradientTransform="matrix(-1 0 0 -1 49 47.031)" x1="12.364" y1="11.394" x2="18.227" y2="17.581"/><radialGradient xlink:href="#d" id="h" gradientUnits="userSpaceOnUse" gradientTransform="matrix(-2.77439 0 0 1.9697 112.762 -872.885)" cx="605.714" cy="486.648" fx="605.714" fy="486.648" r="117.143"/><radialGradient xlink:href="#d" id="g" gradientUnits="userSpaceOnUse" gradientTransform="matrix(2.77439 0 0 1.9697 -1891.633 -872.885)" cx="605.714" cy="486.648" fx="605.714" fy="486.648" r="117.143"/></defs><g style="display:inline"><path style="opacity:.40206185;color:@{base};fill:url(#f);fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:miter;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" d="M-1559.252-150.697h1339.633V327.66h-1339.633z" transform="matrix(.02313 0 0 .01486 44.967 42.796)"/><path d="M-219.619-150.68v478.33c142.874.9 345.4-107.17 345.4-239.196S-33.655-150.68-219.619-150.68" style="opacity:.40206185;color:@{base};fill:url(#g);fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:miter;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" transform="matrix(.02313 0 0 .01486 44.967 42.796)"/><path style="opacity:.40206185;color:@{base};fill:url(#h);fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:miter;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" d="M-1559.252-150.68v478.33c-142.875.9-345.4-107.17-345.4-239.196s159.436-239.134 345.4-239.134" transform="matrix(.02313 0 0 .01486 44.967 42.796)"/></g><rect style="opacity:1;color:@{base};fill:url(#i);fill-opacity:1;fill-rule:evenodd;stroke:@{overlay0};stroke-width:1.00000024;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" width="41.988" height="41.988" x="3.506" y="2.506" rx="1.875" ry="1.875"/><path style="opacity:1;color:@{base};fill:none;fill-opacity:1;fill-rule:evenodd;stroke:@{surface0};stroke-width:1;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" d="M5.375 3.531a.82.82 0 0 0-.844.844v38.25c0 .484.36.844.844.844h37.75c.484 0 .844-.36.844-.844V4.375a.82.82 0 0 0-.844-.844z"/><path style="opacity:1;color:@{base};fill:url(#j);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" d="M6 5v13l4.031-4.031 8 8.062L23 17l-8-8 4-4z"/><path d="M43 5v13l-4.031-4.031-8 8.062L26 17l8-8-4-4z" style="opacity:1;color:@{base};fill:url(#k);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible"/><path d="M6 42.031v-13l4.031 4.032 8-8.063L23 30.031l-8 8 4 4z" style="opacity:1;color:@{base};fill:url(#l);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible"/><path style="opacity:1;color:@{base};fill:url(#m);fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1;stroke-linecap:round;stroke-linejoin:round;marker:none;marker-start:none;marker-mid:none;marker-end:none;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;visibility:visible;display:inline;overflow:visible" d="M43 42.031v-13l-4.031 4.032-8-8.063L26 30.031l8 8-4 4z"/></svg>'
+      );
+      content: url("data:image/svg+xml,@{svg}");
+      filter: none !important;
     }
   }
 }
