Add a rework to move stuff into ytd-shorts that can be.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -327,12 +327,6 @@
       }
     }
 
-    #container.yt-playability-error-supported-renderers,
-    #container.yt-playability-error-supported-renderers
-      .playerInterstitialRendererScrim {
-      background-color: @surface0;
-    }
-
     &:not(.style-scope) {
       --primary-text-color: @text;
       --primary-background-color: @base;
@@ -397,15 +391,6 @@
 
     .yt-page-navigation-progress {
       background: @accent;
-    }
-
-    ytd-shorts
-      #shorts-container.ytd-shorts:has(
-        .yt-playability-error-supported-renderers
-      )
-      + #shorts-panel-container.ytd-shorts
-      + .navigation-container.ytd-shorts {
-      background-color: @base;
     }
 
     /* Selected chapter */
@@ -1031,56 +1016,68 @@
       box-shadow: fade(@accent, 10%) 0 0 0 10px;
     }
 
-    #shorts-container {
-      --yt-spec-static-overlay-text-primary: @white;
-      .yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--tonal {
-        color: @white;
+    .ytd-shorts {
+      &.navigation-container {
+        background-color: @base;
       }
 
-      .YtwFactoidRendererLabel {
-        color: @subtext0;
-      }
-      .YtwFactoidRendererValue {
-        color: @text;
-      }
-
-      ytd-reel-video-renderer:not([is-watch-while-mode]) {
-        .yt-spec-button-shape-with-label__label {
-          color: @subtext1;
+      &#shorts-container {
+        #initial-player-container,
+        #container.yt-playability-error-supported-renderers
+          .playerInterstitialRendererScrim {
+          background-color: @surface0;
         }
-      }
-      ytd-reel-video-renderer[is-watch-while-mode]
-        .yt-spec-button-shape-with-label__label {
-        color: @white;
-      }
 
-      .yt-spec-button-shape-next--overlay-dark.yt-spec-button-shape-next--tonal,
-      .YtdDesktopShortsVolumeControlsBackgroundScrim {
-        background-color: fade(@black, 60%);
-        color: @white;
-      }
+        --yt-spec-static-overlay-text-primary: @white;
+        .yt-spec-button-shape-next--overlay.yt-spec-button-shape-next--tonal {
+          color: @white;
+        }
 
-      .YtProgressBarLineProgressBarPlayed,
-      .YtProgressBarPlayheadProgressBarPlayheadDot {
-        background-color: @accent;
-      }
-
-      .yt-spec-button-shape-next--overlay-dark.yt-spec-button-shape-next--filled {
-        background-color: @accent;
-        color: @crust;
-      }
-
-      .YtdDesktopShortsVolumeControlsMuteIcon {
-        color: @white;
-      }
-
-      /* Buy super thanks button */
-      .YtdShortsSuggestedActionStaticHostContainer {
-        background-color: fade(@black, 60%);
-
-        .YtdShortsSuggestedActionStaticHostLeadingIcon,
-        .YtdShortsSuggestedActionStaticHostPrimaryText {
+        .YtwFactoidRendererLabel {
+          color: @subtext0;
+        }
+        .YtwFactoidRendererValue {
           color: @text;
+        }
+
+        ytd-reel-video-renderer:not([is-watch-while-mode]) {
+          .yt-spec-button-shape-with-label__label {
+            color: @subtext1;
+          }
+        }
+        ytd-reel-video-renderer[is-watch-while-mode]
+          .yt-spec-button-shape-with-label__label {
+          color: @white;
+        }
+
+        .yt-spec-button-shape-next--overlay-dark.yt-spec-button-shape-next--tonal,
+        .YtdDesktopShortsVolumeControlsBackgroundScrim {
+          background-color: fade(@black, 60%);
+          color: @white;
+        }
+
+        .YtProgressBarLineProgressBarPlayed,
+        .YtProgressBarPlayheadProgressBarPlayheadDot {
+          background-color: @accent;
+        }
+
+        .yt-spec-button-shape-next--overlay-dark.yt-spec-button-shape-next--filled {
+          background-color: @accent;
+          color: @crust;
+        }
+
+        .YtdDesktopShortsVolumeControlsMuteIcon {
+          color: @white;
+        }
+
+        /* Buy super thanks button */
+        .YtdShortsSuggestedActionStaticHostContainer {
+          background-color: fade(@black, 60%);
+
+          .YtdShortsSuggestedActionStaticHostLeadingIcon,
+          .YtdShortsSuggestedActionStaticHostPrimaryText {
+            color: @text;
+          }
         }
       }
     }
