Fix some lingering stuff from other docs.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/template/catppuccin.user.less
+++ b/template/catppuccin.user.less
@@ -66,16 +66,12 @@
   }
 }
 
-/* If the website is a wiki and uses the popular MediaWiki backend, with a Vector 2022 skin,
+/* If the website is a wiki and uses the popular MediaWiki backend, with the Vector 2022 skin,
    you can furthermore reset the MediaWiki variables of the site and rewrite them easily,
    with our dedicated library. It maps the standard variables, icons, toolbar theming, and
    much more.
 */
 @import "https://userstyles.catppuccin.com/lib/mediawiki.less";
-
-// Outside the #catppuccin mixin, add the reset block to remove the base mediawiki settings included on the page itself.
-
-#__mediawiki.reset();
 
 @-moz-document domain("<website-domain>") {
   /* Given that we're working with Vector 2022 skins primarily, here we can add specificity
