fix(animepahe): add pahe.win

--- a/styles/animepahe/catppuccin.user.less
+++ b/styles/animepahe/catppuccin.user.less
@@ -158,11 +158,109 @@
             background-color: @pink !important;
             color: @crust !important;
         }
-			
-			.refetch {
-				background-color: @pink !important;
+
+    .refetch, 
+    .lazyloaded {
+        background-color: @pink !important;
         color: @crust !important;
-			}
+    }
+	
+    .form-inline.nav-search .input-search {
+      border-color: transparent !important;
+    }
+
+    .form-inline.nav-search .input-search:focus {
+      border-color: @pink !important;
+    }
+	
+	  .card-body {
+		  background-color: @--surface0 !important;
+	  }
 			
     }
+}
+
+@-moz-document domain("pahe.win") {
+
+    :root:not(.dark, .light) {
+        @media (prefers-color-scheme: light) {
+            #catppuccin(@lightFlavor);
+        }
+        @media (prefers-color-scheme: dark) {
+            #catppuccin(@darkFlavor);
+        }
+    }
+
+    :root {
+        &.dark {
+            #catppuccin(@darkFlavor);
+        }
+        &.light {
+            #catppuccin(@lightFlavor);
+        }
+    }
+
+    #catppuccin(@flavor) {
+        #lib.palette();
+        #lib.defaults();
+
+      body {
+    background-color: @crust !important;
+}
+
+.navbar-main,
+.card,
+.footer,
+.navbar-collapse-overlay {
+    background-color: @surface0 !important;
+}
+
+.btn-primary {
+    background-color: @pink !important;
+    color: @crust !important;
+    outline-color: @mauve !important;
+    border-color: @mauve !important;
+
+    &:hover {
+        background-color: @flamingo !important;
+    }
+}
+
+.btn-secondary,
+.btn-white {
+    background-color: @mauve !important;
+    color: @crust !important;
+
+    &:hover {
+        background-color: @lavender !important;
+    }
+}
+
+.text-primary {
+    color: @pink !important;
+}
+
+.text-secondary {
+    color: @mauve !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: @pink !important;
+}
+
+p {
+    color: @text !important;
+}
+
+.d-block:hover {
+    color: @blue !important;
+}
+
+.dropdown-body {
+    background-color: @base !important;
+}
+
+.bg-dropdown-secondary {
+    background-color: @mantle !important;
+}
 }
