--- a/styles/animepahe/catppuccin.user.less
+++ b/styles/animepahe/catppuccin.user.less
@@ -1,11 +1,11 @@
 /* ==UserStyle==
-@name AnimePahe Catppuccin
+@name AnimePahe/Pahe Win Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/animepahe
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/animepahe
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/animepahe/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Aanimepahe
-@description Soothing pastel theme for AnimePahe
+@description Soothing pastel theme for AnimePahe and Pahe Win
 @author Catppuccin
 @license MIT
 
