fix(animepahe): missing }

--- a/styles/animepahe/catppuccin.user.less
+++ b/styles/animepahe/catppuccin.user.less
@@ -19,248 +19,271 @@
 
 @-moz-document domain("animepahe.si") {
 
-    :root:not(.dark, .light) {
-        @media (prefers-color-scheme: light) {
-            #catppuccin(@lightFlavor);
-        }
-        @media (prefers-color-scheme: dark) {
-            #catppuccin(@darkFlavor);
-        }
-    }
+	:root:not(.dark, .light) {
+		@media (prefers-color-scheme: light) {
+			#catppuccin(@lightFlavor);
+		}
 
-    :root {
-        &.dark {
-            #catppuccin(@darkFlavor);
-        }
-        &.light {
-            #catppuccin(@lightFlavor);
-        }
-    }
+		@media (prefers-color-scheme: dark) {
+			#catppuccin(@darkFlavor);
+		}
+	}
 
-    #catppuccin(@flavor) {
-        #lib.palette();
-        #lib.defaults();
+	:root {
+		&.dark {
+			#catppuccin(@darkFlavor);
+		}
 
-        /* ---------- ELEMENT STYLES ---------- */
-        body, .main-header, .content-wrapper, .nav-link {
-            background-color: @base !important;
-            border-color: @base !important;
-        }
+		&.light {
+			#catppuccin(@lightFlavor);
+		}
+	}
 
-        .nav-link {
-            color: @pink !important;
-        }
+	#catppuccin(@flavor) {
+		#lib.palette();
+		#lib.defaults();
 
-        .input-search, .nav-search {
-            background-color: @surface1 !important;
-            color: @pink !important;
-        }
+		/* ---------- ELEMENT STYLES ---------- */
+		body,
+		.main-header,
+		.content-wrapper,
+		.nav-link {
+			background-color: @base  !important;
+			border-color: @base  !important;
+		}
 
-        .search-results {
-            background-color: @mantle !important;
-            color: @text !important;
-        }
+		.nav-link {
+			color: @pink  !important;
+		}
 
-        .search-results > li:hover, .episode-bar {
-            background-color: @surface0 !important;
-        }
+		.input-search,
+		.nav-search {
+			background-color: @surface1  !important;
+			color: @pink  !important;
+		}
 
-        .active > span, .episode-new {
-            background-color: @pink !important;
-            color: @crust !important;
-        }
+		.search-results {
+			background-color: @mantle  !important;
+			color: @text  !important;
+		}
 
-        .disabled > a {
-            background-color: @crust !important;
-            color: @text !important;
-        }
+		.search-results>li:hover,
+		.episode-bar {
+			background-color: @surface0  !important;
+		}
 
-        .page-link {
-            background-color: @mantle !important;
-            color: @text !important;
-        }
+		.active>span,
+		.episode-new {
+			background-color: @pink  !important;
+			color: @crust  !important;
+		}
 
-        .page-link:hover {
-            background-color: @surface0 !important;
-            color: @text !important;
-        }
+		.disabled>a {
+			background-color: @crust  !important;
+			color: @text  !important;
+		}
 
-        li.active > .page-link:hover {
-            background-color: @pink !important;
-            color: @crust !important;
-        }
+		.page-link {
+			background-color: @mantle  !important;
+			color: @text  !important;
+		}
 
-        h1, h2, h3, h4, .text-center {
-            color: @text !important;
-        }
+		.page-link:hover {
+			background-color: @surface0  !important;
+			color: @text  !important;
+		}
 
-        a {
-            color: @pink !important;
+		li.active>.page-link:hover {
+			background-color: @pink  !important;
+			color: @crust  !important;
+		}
 
-            &:hover {
-                color: @blue !important;
-            }
-        }
+		h1,
+		h2,
+		h3,
+		h4,
+		.text-center {
+			color: @text  !important;
+		}
 
-        li.active::before {
-            background-color: @pink !important;
-        }
+		a {
+			color: @pink  !important;
 
-        .anime-genre.font-weight-bold ul li a {
-            background-color: @surface0 !important;
-        }
+			&:hover {
+				color: @blue  !important;
+			}
+		}
 
-        .anime-genre ul li a:hover {
-            border-color: @blue !important;
-        }
+		li.active::before {
+			background-color: @pink  !important;
+		}
 
-        h4 > span {
-            border-color: @pink !important;
-        }
+		.anime-genre.font-weight-bold ul li a {
+			background-color: @surface0  !important;
+		}
 
-        .BD, .badge-primary {
-            background-color: @blue !important;
-            color: @crust !important;
-        }
+		.anime-genre ul li a:hover {
+			border-color: @blue  !important;
+		}
 
-        .BD, .badge-warning {
-            background-color: @yellow !important;
-            color: @crust !important;
-        }
+		h4>span {
+			border-color: @pink  !important;
+		}
 
-        .btn-dark.active {
-            background-color: @pink !important;
-            color: @crust !important;
-        }
+		.BD,
+		.badge-primary {
+			background-color: @blue  !important;
+			color: @crust  !important;
+		}
 
-        .btn {
-            background-color: @crust !important;
-        }
+		.BD,
+		.badge-warning {
+			background-color: @yellow  !important;
+			color: @crust  !important;
+		}
 
-        .click-to-load, .dropdown-toggle {
-            background-color: @surface0 !important;
-        }
+		.btn-dark.active {
+			background-color: @pink  !important;
+			color: @crust  !important;
+		}
 
-        .dropdown-menu.show {
-            background-color: @crust !important;
-        }
+		.btn {
+			background-color: @crust  !important;
+		}
 
-        .dropdown-item {
-            color: @text !important;
+		.click-to-load,
+		.dropdown-toggle {
+			background-color: @surface0  !important;
+		}
 
-            &:hover {
-                background-color: @surface0 !important;
-                color: @text !important;
-            }
-        }
+		.dropdown-menu.show {
+			background-color: @crust  !important;
+		}
 
-        .dropdown-item.active {
-            background-color: @pink !important;
-            color: @crust !important;
-        }
+		.dropdown-item {
+			color: @text  !important;
 
-    .refetch, 
-    .lazyloaded {
-        background-color: @pink !important;
-        color: @crust !important;
-    }
-	
-    .form-inline.nav-search .input-search {
-      border-color: transparent !important;
-    }
+			&:hover {
+				background-color: @surface0  !important;
+				color: @text  !important;
+			}
+		}
 
-    .form-inline.nav-search .input-search:focus {
-      border-color: @pink !important;
-    }
-	
-	  .card-body {
-		  background-color: @--surface0 !important;
-	  }
-			
-    }
+		.dropdown-item.active {
+			background-color: @pink  !important;
+			color: @crust  !important;
+		}
+
+		.refetch,
+		.lazyloaded {
+			background-color: @pink  !important;
+			color: @crust  !important;
+		}
+
+		.form-inline.nav-search .input-search {
+			border-color: transparent !important;
+		}
+
+		.form-inline.nav-search .input-search:focus {
+			border-color: @pink  !important;
+		}
+
+		.card-body {
+			background-color: @--surface0  !important;
+		}
+
+	}
 }
 
 @-moz-document domain("pahe.win") {
 
-    :root:not(.dark, .light) {
-        @media (prefers-color-scheme: light) {
-            #catppuccin(@lightFlavor);
-        }
-        @media (prefers-color-scheme: dark) {
-            #catppuccin(@darkFlavor);
-        }
-    }
+	:root:not(.dark, .light) {
+		@media (prefers-color-scheme: light) {
+			#catppuccin(@lightFlavor);
+		}
 
-    :root {
-        &.dark {
-            #catppuccin(@darkFlavor);
-        }
-        &.light {
-            #catppuccin(@lightFlavor);
-        }
-    }
+		@media (prefers-color-scheme: dark) {
+			#catppuccin(@darkFlavor);
+		}
+	}
 
-    #catppuccin(@flavor) {
-        #lib.palette();
-        #lib.defaults();
+	:root {
+		&.dark {
+			#catppuccin(@darkFlavor);
+		}
 
-      body {
-    background-color: @crust !important;
-}
+		&.light {
+			#catppuccin(@lightFlavor);
+		}
+	}
 
-.navbar-main,
-.card,
-.footer,
-.navbar-collapse-overlay {
-    background-color: @surface0 !important;
-}
+	#catppuccin(@flavor) {
+		#lib.palette();
+		#lib.defaults();
 
-.btn-primary {
-    background-color: @pink !important;
-    color: @crust !important;
-    outline-color: @mauve !important;
-    border-color: @mauve !important;
+		body {
+			background-color: @crust  !important;
+		}
 
-    &:hover {
-        background-color: @flamingo !important;
-    }
-}
+		.navbar-main,
+		.card,
+		.footer,
+		.navbar-collapse-overlay {
+			background-color: @surface0  !important;
+		}
 
-.btn-secondary,
-.btn-white {
-    background-color: @mauve !important;
-    color: @crust !important;
+		.btn-primary {
+			background-color: @pink  !important;
+			color: @crust  !important;
+			outline-color: @mauve  !important;
+			border-color: @mauve  !important;
 
-    &:hover {
-        background-color: @lavender !important;
-    }
-}
+			&:hover {
+				background-color: @flamingo  !important;
+			}
+		}
 
-.text-primary {
-    color: @pink !important;
-}
+		.btn-secondary,
+		.btn-white {
+			background-color: @mauve  !important;
+			color: @crust  !important;
 
-.text-secondary {
-    color: @mauve !important;
-}
+			&:hover {
+				background-color: @lavender  !important;
+			}
+		}
 
-h1, h2, h3, h4, h5, h6 {
-    color: @pink !important;
-}
+		.text-primary {
+			color: @pink  !important;
+		}
 
-p {
-    color: @text !important;
-}
+		.text-secondary {
+			color: @mauve  !important;
+		}
 
-.d-block:hover {
-    color: @blue !important;
-}
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			color: @pink  !important;
+		}
 
-.dropdown-body {
-    background-color: @base !important;
-}
+		p {
+			color: @text  !important;
+		}
 
-.bg-dropdown-secondary {
-    background-color: @mantle !important;
-}
+		.d-block:hover {
+			color: @blue  !important;
+		}
+
+		.dropdown-body {
+			background-color: @base  !important;
+		}
+
+		.bg-dropdown-secondary {
+			background-color: @mantle  !important;
+		}
+	}
 }
