Fix some stuff.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -38,6 +38,8 @@
     #lib.defaults();
     #lib.css-variables();
 
+    filter: none !important;
+
     img[alt="Git"] {
       filter: @accent-filter !important;
     }
@@ -62,10 +64,7 @@
     --nav-link-color: @blue;
     --link-hover-color: @sky;
     --fixed-width-font-color: @text;
-    --button-bg-color: linear-gradient(
-      @surface0,
-      darken(@surface0, 5%)
-    );
+    --button-bg-color: linear-gradient(@surface0, darken(@surface0, 5%));
     --button-bg-hover-color: linear-gradient(
       @accent,
       darken(@accent, 5%)
@@ -184,8 +183,19 @@
       }
     }
 
-    #front-nav a img {
-      background-color: var(--font-color) !important;
+    #front-nav {
+      a img {
+        color: var(--font-color) !important;
+        background-color: var(--button-bg-color) !important;
+
+        &:hover {
+          background-color: var(--button-bg-hover-color) !important;
+        }
+
+        &:active, &:focus {
+          background-color: var(--button-bg-selected-color) !important;
+        }
+      }
     }
 
     #front-downloads {
@@ -194,8 +204,12 @@
       }
 
       #download-link {
-        color: var(--font-color) !important;
+        color: var(--bg-color) !important;
       }
+    }
+
+    .callout img {
+      filter: @accent-filter !important;
     }
 
     aside.sidebar {
