--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -19,16 +19,15 @@
 @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
 @-moz-document domain("git-scm.com") {
-  @media screen and (prefers-color-scheme: dark) {
-    :root:not([data-theme="light"]),
-    :root[data-theme="dark"] {
+  :root:is(
+    :is([data-theme="light"]),
+    :not([data-theme="light"])
+  ) {
+    @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
     }
-  }
 
-  @media screen and (prefers-color-scheme: light) {
-    :root:not([data-theme="dark"]),
-    :root[data-theme="light"] {
+    @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
     }
   }
@@ -38,33 +37,26 @@
     #lib.defaults();
     #lib.css-variables();
 
-    filter: none !important;
-
-    img[alt="Git"] {
-      filter: @accent-filter !important;
-    }
-
-    // :root[data-celebration="git-turns-20"] img[alt="Git"]
-    &[data-celebration="git-turns-20"] img[alt="Git"] {
-      filter: @peach-filter !important;
-    }
-
     --orange: @accent;
     --orange-darker-5: darken(@accent, 5%);
     --blue: @blue;
     --font-color: @text;
     --aside-font-color: @subtext0;
     --light-font-color: @subtext0;
-    --light-font-color-darker-10: darken(@subtext0, 10%);
-    --light-font-color-darker-25: darken(@subtext0, 25%);
-    --light-font-color-darker-35: darken(@subtext0, 35%);
+    --light-font-color-darker-10: @text;
+    --light-font-color-darker-25: @base;
+    --light-font-color-darker-35: @text;
+    // ? Is this...used??? Might be specific webpage. Theme it just for redundancy.
     --light-font-color-darker-55: darken(@subtext0, 55%);
     --light-font-color-lighter-20: lighten(@subtext0, 20%);
     --link-color: @blue;
     --nav-link-color: @blue;
     --link-hover-color: @sky;
     --fixed-width-font-color: @text;
-    --button-bg-color: linear-gradient(@surface0, darken(@surface0, 5%));
+    --button-bg-color: linear-gradient(
+      @surface0,
+      darken(@surface0, 5%)
+    );
     --button-bg-hover-color: linear-gradient(
       @accent,
       darken(@accent, 5%)
@@ -84,6 +76,7 @@
     --highlight-bg-color: fade(@accent, 30%);
     --pre-bg-color: @mantle;
     --pre-border: @overlay0;
+    --synopsis-bg-color: @surface0;
     --black-3: @crust;
     --main-bg: @base;
     --main-border: @overlay0;
@@ -102,6 +95,20 @@
     --logos-3: darken(@accent, 10%);
     --logos-4: darken(@accent, 15%);
 
+    img[alt="Git"] {
+      filter: @accent-filter !important;
+    }
+
+    // Thank gosh, the icons need to be the same color as the text anyway!
+    #topics-dropdown h3 {
+      filter: @text-filter !important;
+    }
+
+    // :root[data-celebration="git-turns-20"] img[alt="Git"]
+    &[data-celebration="git-turns-20"] img[alt="Git"] {
+      filter: @peach-filter !important;
+    }
+
     a:hover {
       color: var(--link-hover-color) !important;
     }
@@ -112,6 +119,14 @@
 
     fieldset {
       border-color: var(--pre-border) !important;
+    }
+
+    // ! Not sure we're keeping this. Keep an eye on Leah's decision.
+    :not(.verseblock > .content) > span.synopsis,
+    :not(.verseblock > .content) > span.synopsis * {
+      color: var(--orange) !important;
+      background-color: var(--synopsis-bg-color) !important;
+      border-color: transparent !important;
     }
 
     #book-chapters,
@@ -173,39 +188,142 @@
 
           &.matches a {
             &.highlight, &:hover {
-              color: var(--font-color) !important;
+              color: var(--bg-color) !important;
               text-shadow: var(--shadow-color) !important;
-              background-color: var(--button-bg-hover-color) !important;
-              background-image: unset !important;
+              background-image: var(--button-bg-hover-color) !important;
             }
           }
         }
       }
     }
 
-    #front-nav {
-      a img {
+    #front-nav a {
+      img {
         color: var(--font-color) !important;
-        background-color: var(--button-bg-color) !important;
+        background-image: var(--button-bg-color) !important;
+        filter: none !important;
 
         &:hover {
-          background-color: var(--button-bg-hover-color) !important;
+          background-image: var(--button-bg-hover-color) !important;
         }
 
         &:active, &:focus {
-          background-color: var(--button-bg-selected-color) !important;
+          background-image: var(--button-bg-selected-color) !important;
         }
       }
+
+      &[href="/about"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M415.9 274.5c12.2-3.3 25 2.5 30.5 13.8l18.6 37.6c10.3 1.4 20.4 4.2 29.9 8.1l35-23.3c10.5-7 24.4-5.6 33.3 3.3l19.2 19.2c8.9 8.9 10.3 22.9 3.3 33.3l-23.3 34.9c1.9 4.7 3.6 9.6 5 14.7s2.3 10.1 3 15.2l37.7 18.6c11.3 5.6 17.1 18.4 13.8 30.5l-7 26.2c-3.3 12.1-14.6 20.3-27.2 19.5l-42-2.7c-6.3 8.1-13.6 15.6-21.9 22l2.7 41.9c.8 12.6-7.4 24-19.5 27.2l-26.2 7c-12.2 3.3-24.9-2.5-30.5-13.8l-18.6-37.6c-10.3-1.4-20.4-4.2-29.9-8.1l-35 23.3c-10.5 7-24.4 5.6-33.3-3.3l-19.2-19.2c-8.9-8.9-10.3-22.8-3.3-33.3l23.3-35c-1.9-4.7-3.6-9.6-5-14.7s-2.3-10.2-3-15.2L288.6 446c-11.3-5.6-17-18.4-13.8-30.5l7-26.2c3.3-12.1 14.6-20.3 27.2-19.5l41.9 2.7c6.3-8.1 13.6-15.6 21.9-22l-2.7-41.8c-.8-12.6 7.4-24 19.5-27.2l26.2-7zM448.4 404c-24.3 0-44 19.7-43.9 44.1 0 24.3 19.7 43.9 44 43.9s44-19.7 44-44c-.1-24.4-19.8-44-44.1-44M224.9 18.5l26.2 7c12.1 3.3 20.3 14.7 19.5 27.2l-2.7 41.8c8.3 6.4 15.6 13.8 21.9 22l42-2.7c12.5-.8 23.9 7.4 27.2 19.5l7 26.2c3.2 12.1-2.5 24.9-13.8 30.5l-37.7 18.6c-.7 5.1-1.7 10.2-3 15.2s-3.1 10-5 14.7l23.3 35c7 10.5 5.6 24.4-3.3 33.3L307.3 326c-8.9 8.9-22.8 10.3-33.3 3.3L239 306c-9.5 3.9-19.6 6.7-29.9 8.1l-18.6 37.6c-5.6 11.3-18.4 17-30.5 13.8l-26.2-7c-12.2-3.3-20.3-14.7-19.5-27.2l2.7-41.9c-8.3-6.4-15.6-13.8-21.9-22l-42 2.7c-12.5.8-23.9-7.4-27.2-19.5l-7-26.2c-3.2-12.1 2.5-24.9 13.8-30.5l37.7-18.6c.7-5.1 1.7-10.1 3-15.2 1.4-5.1 3-10 5-14.7l-23.3-34.9c-7-10.5-5.6-24.4 3.3-33.3L77.6 58c8.9-8.9 22.8-10.3 33.3-3.3l35 23.3c9.5-3.9 19.6-6.7 29.9-8.1l18.6-37.6c5.6-11.3 18.3-17 30.5-13.8M192.4 148c-24.3 0-44 19.7-44 44s19.7 44 44 44 44-19.7 44-44-19.7-44-44-44"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M415.9 274.5c12.2-3.3 25 2.5 30.5 13.8l18.6 37.6c10.3 1.4 20.4 4.2 29.9 8.1l35-23.3c10.5-7 24.4-5.6 33.3 3.3l19.2 19.2c8.9 8.9 10.3 22.9 3.3 33.3l-23.3 34.9c1.9 4.7 3.6 9.6 5 14.7s2.3 10.1 3 15.2l37.7 18.6c11.3 5.6 17.1 18.4 13.8 30.5l-7 26.2c-3.3 12.1-14.6 20.3-27.2 19.5l-42-2.7c-6.3 8.1-13.6 15.6-21.9 22l2.7 41.9c.8 12.6-7.4 24-19.5 27.2l-26.2 7c-12.2 3.3-24.9-2.5-30.5-13.8l-18.6-37.6c-10.3-1.4-20.4-4.2-29.9-8.1l-35 23.3c-10.5 7-24.4 5.6-33.3-3.3l-19.2-19.2c-8.9-8.9-10.3-22.8-3.3-33.3l23.3-35c-1.9-4.7-3.6-9.6-5-14.7s-2.3-10.2-3-15.2L288.6 446c-11.3-5.6-17-18.4-13.8-30.5l7-26.2c3.3-12.1 14.6-20.3 27.2-19.5l41.9 2.7c6.3-8.1 13.6-15.6 21.9-22l-2.7-41.8c-.8-12.6 7.4-24 19.5-27.2l26.2-7zM448.4 404c-24.3 0-44 19.7-43.9 44.1 0 24.3 19.7 43.9 44 43.9s44-19.7 44-44c-.1-24.4-19.8-44-44.1-44M224.9 18.5l26.2 7c12.1 3.3 20.3 14.7 19.5 27.2l-2.7 41.8c8.3 6.4 15.6 13.8 21.9 22l42-2.7c12.5-.8 23.9 7.4 27.2 19.5l7 26.2c3.2 12.1-2.5 24.9-13.8 30.5l-37.7 18.6c-.7 5.1-1.7 10.2-3 15.2s-3.1 10-5 14.7l23.3 35c7 10.5 5.6 24.4-3.3 33.3L307.3 326c-8.9 8.9-22.8 10.3-33.3 3.3L239 306c-9.5 3.9-19.6 6.7-29.9 8.1l-18.6 37.6c-5.6 11.3-18.4 17-30.5 13.8l-26.2-7c-12.2-3.3-20.3-14.7-19.5-27.2l2.7-41.9c-8.3-6.4-15.6-13.8-21.9-22l-42 2.7c-12.5.8-23.9-7.4-27.2-19.5l-7-26.2c-3.2-12.1 2.5-24.9 13.8-30.5l37.7-18.6c.7-5.1 1.7-10.1 3-15.2 1.4-5.1 3-10 5-14.7l-23.3-34.9c-7-10.5-5.6-24.4 3.3-33.3L77.6 58c8.9-8.9 22.8-10.3 33.3-3.3l35 23.3c9.5-3.9 19.6-6.7 29.9-8.1l18.6-37.6c5.6-11.3 18.3-17 30.5-13.8M192.4 148c-24.3 0-44 19.7-44 44s19.7 44 44 44 44-19.7 44-44-19.7-44-44-44"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+
+      &[href="/learn"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M420.9 448c7.3-22.3 21.9-42.5 38.4-59.9C492 353.7 512 307.2 512 256c0-106-86-192-192-192s-192 86-192 192c0 51.2 20 97.7 52.7 132.1 16.5 17.4 31.2 37.6 38.4 59.9h201.7zm-4.9 48H224v16c0 44.2 35.8 80 80 80h32c44.2 0 80-35.8 80-80zM312 176c-39.8 0-72 32.2-72 72 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-66.3 53.7-120 120-120 13.3 0 24 10.7 24 24s-10.7 24-24 24"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M420.9 448c7.3-22.3 21.9-42.5 38.4-59.9C492 353.7 512 307.2 512 256c0-106-86-192-192-192s-192 86-192 192c0 51.2 20 97.7 52.7 132.1 16.5 17.4 31.2 37.6 38.4 59.9h201.7zm-4.9 48H224v16c0 44.2 35.8 80 80 80h32c44.2 0 80-35.8 80-80zM312 176c-39.8 0-72 32.2-72 72 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-66.3 53.7-120 120-120 13.3 0 24 10.7 24 24s-10.7 24-24 24"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+
+      &[href="/tools"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M102.8 57.3c5.4-5.4 13.8-6.2 20.2-2l118.9 79.2c8.9 5.9 14.2 15.9 14.2 26.6v49.6l90.8 90.8c33.3-15 73.9-8.9 101.2 18.5l126.1 126.1c18.7 18.7 18.7 49.1 0 67.9l-60.1 60.1c-18.7 18.7-49.1 18.7-67.9 0L320.1 448c-27.4-27.4-33.5-67.9-18.5-101.2L210.8 256h-49.6c-10.7 0-20.7-5.3-26.6-14.2L55.4 122.9c-4.2-6.3-3.4-14.8 2-20.2zm145 303.5c-6.3 36.9 2.3 75.9 26.2 107.2l-94.9 95c-28.1 28.1-73.7 28.1-101.8 0s-28.1-73.7 0-101.8l135.4-135.5 35.2 35.1zM416.1 64c20.1 0 39.4 3.7 57.1 10.5 10 3.8 11.8 16.5 4.3 24.1l-56.7 56.7c-3 3-4.7 7.1-4.7 11.3V208c0 8.8 7.2 16 16 16h41.4c4.2 0 8.3-1.7 11.3-4.7l56.7-56.7c7.6-7.5 20.3-5.7 24.1 4.3 6.8 17.7 10.5 37 10.5 57.1 0 43.2-17.2 82.3-45 111.1L482 286c-33.1-33-78.5-45.7-121.1-38.4l-56.8-56.8v-29.7l-.2-5c-.8-12.4-4.4-24.3-10.5-34.9 29.4-35 73.4-57.2 122.7-57.3z"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M102.8 57.3c5.4-5.4 13.8-6.2 20.2-2l118.9 79.2c8.9 5.9 14.2 15.9 14.2 26.6v49.6l90.8 90.8c33.3-15 73.9-8.9 101.2 18.5l126.1 126.1c18.7 18.7 18.7 49.1 0 67.9l-60.1 60.1c-18.7 18.7-49.1 18.7-67.9 0L320.1 448c-27.4-27.4-33.5-67.9-18.5-101.2L210.8 256h-49.6c-10.7 0-20.7-5.3-26.6-14.2L55.4 122.9c-4.2-6.3-3.4-14.8 2-20.2zm145 303.5c-6.3 36.9 2.3 75.9 26.2 107.2l-94.9 95c-28.1 28.1-73.7 28.1-101.8 0s-28.1-73.7 0-101.8l135.4-135.5 35.2 35.1zM416.1 64c20.1 0 39.4 3.7 57.1 10.5 10 3.8 11.8 16.5 4.3 24.1l-56.7 56.7c-3 3-4.7 7.1-4.7 11.3V208c0 8.8 7.2 16 16 16h41.4c4.2 0 8.3-1.7 11.3-4.7l56.7-56.7c7.6-7.5 20.3-5.7 24.1 4.3 6.8 17.7 10.5 37 10.5 57.1 0 43.2-17.2 82.3-45 111.1L482 286c-33.1-33-78.5-45.7-121.1-38.4l-56.8-56.8v-29.7l-.2-5c-.8-12.4-4.4-24.3-10.5-34.9 29.4-35 73.4-57.2 122.7-57.3z"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+
+      &[href="/docs"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M320 205.3v309.3l.5-.2A449 449 0 0 1 492.8 480H512V160h-19.2c-42.2 0-84.1 8.4-123.1 24.6-16.8 7-33.4 13.9-49.7 20.7m-25.1-79.8L320 136l25.1-10.5C391.9 106 442.1 96 492.8 96H528c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48h-35.2c-50.7 0-100.9 10-147.7 29.5l-12.8 5.3c-7.9 3.3-16.7 3.3-24.6 0l-12.8-5.3c-46.8-19.5-97-29.5-147.7-29.5H112c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h35.2c50.7 0 100.9 10 147.7 29.5"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M320 205.3v309.3l.5-.2A449 449 0 0 1 492.8 480H512V160h-19.2c-42.2 0-84.1 8.4-123.1 24.6-16.8 7-33.4 13.9-49.7 20.7m-25.1-79.8L320 136l25.1-10.5C391.9 106 442.1 96 492.8 96H528c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48h-35.2c-50.7 0-100.9 10-147.7 29.5l-12.8 5.3c-7.9 3.3-16.7 3.3-24.6 0l-12.8-5.3c-46.8-19.5-97-29.5-147.7-29.5H112c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h35.2c50.7 0 100.9 10 147.7 29.5"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+
+      &.install-link img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M297.4 598.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9S460.9 416 448 416h-64V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v336h-64c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 7 34.8z"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M297.4 598.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9S460.9 416 448 416h-64V80c0-26.5-21.5-48-48-48h-32c-26.5 0-48 21.5-48 48v336h-64c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 7 34.8z"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+
+      &[href="/community"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M108.2 322.7c6.1-15.2 4-32.6-5.6-45.9C88.1 256.7 80 233.1 80 208c0-66.8 60.5-128 144-128s144 61.2 144 128-60.5 128-144 128c-15.9 0-31.1-2.3-45.3-6.5-10.3-3.1-21.4-2.5-31.4 1.5l-50.4 20.2 11.4-28.5zM32 208c0 35.8 11.6 69.1 31.7 96.8l-29.8 74.4c-1.3 3.2-1.9 6.6-1.9 10C32 404 44 416 58.8 416c3.4 0 6.8-.7 10-1.9l96.3-38.5c18.6 5.5 38.4 8.4 58.9 8.4 106 0 192-78.8 192-176S330 32 224 32 32 110.8 32 208m384 368c20.6 0 40.3-3 58.9-8.4l96.3 38.5c3.2 1.3 6.6 1.9 10 1.9 14.8 0 26.8-12 26.8-26.8 0-3.4-.7-6.8-1.9-10l-29.7-74.4c20-27.8 31.7-61.1 31.7-96.8 0-82.4-61.7-151.5-145-170.7-1.6 16.3-5.1 31.9-10.1 46.9 63.9 14.8 107.2 67.3 107.2 123.9 0 25.1-8.1 48.7-22.6 68.8-9.6 13.3-11.7 30.6-5.6 45.9l11.4 28.5-50.4-20.2c-10-4-21.1-4.5-31.4-1.5-14.2 4.2-29.4 6.5-45.3 6.5-72.2 0-127.1-45.7-140.7-101.2-15.6 3.2-31.7 5-48.1 5.2 16.4 81.9 94.7 144 188.8 144z"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+
+        &:hover {
+          @svg: escape(
+            '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{base}"><path d="M108.2 322.7c6.1-15.2 4-32.6-5.6-45.9C88.1 256.7 80 233.1 80 208c0-66.8 60.5-128 144-128s144 61.2 144 128-60.5 128-144 128c-15.9 0-31.1-2.3-45.3-6.5-10.3-3.1-21.4-2.5-31.4 1.5l-50.4 20.2 11.4-28.5zM32 208c0 35.8 11.6 69.1 31.7 96.8l-29.8 74.4c-1.3 3.2-1.9 6.6-1.9 10C32 404 44 416 58.8 416c3.4 0 6.8-.7 10-1.9l96.3-38.5c18.6 5.5 38.4 8.4 58.9 8.4 106 0 192-78.8 192-176S330 32 224 32 32 110.8 32 208m384 368c20.6 0 40.3-3 58.9-8.4l96.3 38.5c3.2 1.3 6.6 1.9 10 1.9 14.8 0 26.8-12 26.8-26.8 0-3.4-.7-6.8-1.9-10l-29.7-74.4c20-27.8 31.7-61.1 31.7-96.8 0-82.4-61.7-151.5-145-170.7-1.6 16.3-5.1 31.9-10.1 46.9 63.9 14.8 107.2 67.3 107.2 123.9 0 25.1-8.1 48.7-22.6 68.8-9.6 13.3-11.7 30.6-5.6 45.9l11.4 28.5-50.4-20.2c-10-4-21.1-4.5-31.4-1.5-14.2 4.2-29.4 6.5-45.3 6.5-72.2 0-127.1-45.7-140.7-101.2-15.6 3.2-31.7 5-48.1 5.2 16.4 81.9 94.7 144 188.8 144z"/></svg>'
+          );
+          content: url("data:image/svg+xml,@{svg}") !important;
+        }
+      }
+    }
+
+    ul#download-next-steps li a {
+      &[href="/book"] img {
+        @svg: escape(
+          '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="@{accent}"><path d="M320 205.3v309.3l.5-.2A449 449 0 0 1 492.8 480H512V160h-19.2c-42.2 0-84.1 8.4-123.1 24.6-16.8 7-33.4 13.9-49.7 20.7m-25.1-79.8L320 136l25.1-10.5C391.9 106 442.1 96 492.8 96H528c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48h-35.2c-50.7 0-100.9 10-147.7 29.5l-12.8 5.3c-7.9 3.3-16.7 3.3-24.6 0l-12.8-5.3c-46.8-19.5-97-29.5-147.7-29.5H112c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h35.2c50.7 0 100.9 10 147.7 29.5"/></svg>'
+        );
+        content: url("data:image/svg+xml,@{svg}") !important;
+      }
+
+      &[href="/downloads/guis"] img {}
     }
 
     #front-downloads {
       .downloads-box {
         outline: var(--base-border-color) !important;
+
+        &::before {
+          filter: @accent-filter !important;
+        }
       }
 
       #download-link {
         color: var(--bg-color) !important;
       }
+    }
+
+    .callout {
+      border-color: var(--pre-border) !important;
     }
 
     .callout img {
@@ -294,7 +412,7 @@
 
     .edition2 {
       section[data-type="titlepage"] h1 {
-        border-bottom: 1px solid #333 !important;
+        border-color: var(--title-border) !important;
       }
 
       nav[data-type="toc"] li[data-type="part"] > a,
@@ -313,11 +431,10 @@
       div[data-type="note"],
       div[data-type="warning"] {
         border-color: var(--pre-border) !important;
-      }
 
-      div[data-type="note"] h1,
-      div[data-type="warning"] h1 {
-        color: @peach !important;
+        h1 {
+          color: @peach !important;
+        }
       }
     }
 
@@ -355,12 +472,12 @@
 
     .bar-chart progress.git::-moz-progress-bar,
     .bar-chart progress.git::-webkit-progress-value {
-      background-color: #e09fa0 !important;
+      background-color: darken(@accent, 10%) !important;
     }
 
     .bar-chart progress.svn::-moz-progress-bar,
     .bar-chart progress.svn::-webkit-progress-value {
-      background-color: #e05f49 !important;
+      background-color: @accent !important;
     }
 
     div#masthead {
@@ -399,7 +516,7 @@
     }
 
     input.pagefind-ui__search-input {
-      background: var(--main-bg) !important;
+      background: var(--bg-color) !important;
     }
 
     #l10n-versions-dropdown footer a {
