refractor(docker): update catppuccin.user.less
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/docker/catppuccin.user.less
+++ b/styles/docker/catppuccin.user.less
@@ -92,7 +92,7 @@
     --input-border-color: @overlay0;
 
     #footer-links a {
-      color: @accent;
+      color: @blue;
 
       &:visited {
         color: @mauve;
