refractor(docker): update catppuccin.user.less
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/docker/catppuccin.user.less
+++ b/styles/docker/catppuccin.user.less
@@ -71,7 +71,7 @@
     --widget-background-color: @mantle;
     --box-border-color: @overlay0;
 
-    --social-button-border-color: @text;
+    --social-button-border-color: @overlay0;
     --secondary-button-text-color: @subtext0;
 
     --presentational-content-color: @text;
