--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -207,7 +207,7 @@
     ins[style*="background:#80ff80"] {
       background: fade(@green, 70%) !important;
     }
-    
+
     span[style*="color:green"],
     span[style*="color: green"] {
       color: @green !important;
@@ -298,7 +298,10 @@
       }
     }
     ._UserActivityFrame_frame .userActivityRoundBox ._UserActivityFrame_header,
-    ._UserActivityFrame_frame .userActivityRoundBox ._UserActivityFrame_footer ._UserActivityFrame_counterDescription {
+    ._UserActivityFrame_frame
+      .userActivityRoundBox
+      ._UserActivityFrame_footer
+      ._UserActivityFrame_counterDescription {
       color: @subtext0;
     }
 
@@ -435,7 +438,7 @@
         filter: @text-filter;
       }
     }
-    
+
     #footer {
       border-top-color: @surface2;
     }
