fix: theme rating graph legend

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -221,7 +221,7 @@
       &[style*="f0f0f0"] {
         background: @base !important;
       }
-      * {
+      *:not(:where(.legendColorBox *)) {
         border-color: var(--border-color) !important;
       }
       .bottom-links,
@@ -275,6 +275,16 @@
     .spoiler-content {
       background: fade(@accent, 20%);
       border-color: @overlay0;
+    }
+
+    div:has(+ table .legendColorBox) {
+      background-color: @surface0 !important;
+    }
+    table:has(.legendColorBox) {
+      color: @text !important;
+    }
+    .legendColorBox > div {
+      border-color: @overlay0 !important;
     }
 
     #userActivityGraph {
